# tt-metal

./: .gitignore  CMakeLists.txt  build_metal.sh  create_venv.sh  install_debian.sh  install_dependencies.sh  install_tt-debian.sh  label_passing_tests.py  run_green_tests.sh
tests/tt_metal/tt_fabric/: CMakeLists.txt
tt-train/tests/: CMakeLists.txt
tt_metal/fabric/: control_plane.cpp
tt_stl/tests/: CMakeLists.txt
ttnn/ttnn/: device.py
